# Elaborato

./: .gitignore  CMakeLists.txt  Date.cpp  Date.h  Time.cpp  Time.h  Timer.cpp  Timer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: CMakeLists.txt  DateTest.cpp  TimeTest.cpp  TimerTest.cpp  runAllTests.cpp
